  * lib/Lintian/Lab.pm:
    + [NT] Added "is_temp" method to identify temp labs from static
      labs.
  * lib/Lintian/Lab/Entry.pm:
    + [NT] Properly strip whitespace when loading collection status.
  * lib/Lintian/Processable/Package.pm:
    + [NT] Use part of the file name as package name if the mandatory
      "Package" or "Source" fields are missing rather than choking.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Accepted patch from Evan Broder to always output effective
      severity in tag descriptions.
  * lib/Lintian/Tags.pm:
    + [NT] Support architecture wildcards in overrides.
    + [NT] Emit "malformed-override" for architecture specific tags for
      unknown architectures and for "arch:all" packages.

  * reporting/harness:
    + [NT] Removed useless "TODO" message from the log output.
  * reporting/html_reports:
    + [JW] Properly handle uploader names with commas.
    + [NT] Use the severities from profiles when generating tag pages.
      Based on patches from Evan Broder.  (Closes: #650712)

 -- Niels Thykier <niels@thykier.net>  Tue, 29 Nov 2011 18:42:37 +0100

lintian (2.5.4) unstable; urgency=medium

  The "perl5.14 (+ misc) fix"-upload.  Medium as perl 5.14
  deprecation warnings tend to make Lintian output unreadable.

  * Summary of tag changes:
    + Added:
      - data.tar.xz-member-without-dpkg-pre-depends
      - gzip-file-is-not-multi-arch-same-safe
      - init.d-script-does-not-implement-optional-option
      - init.d-script-missing-lsb-description
      - maintainer-address-causes-mail-loops-or-bounces
      - missing-build-dependency-for-dh-addon
      - package-depends-on-lower-priority-package
      - package-would-benefit-from-build-arch-targets
      - python-depends-but-no-python-helper
      - python3-depends-but-no-python3-helper
      - transitional-package-should-be-oldlibs-extra
      - uploader-address-causes-mail-loops-or-bounces

  * checks/*:
    + [JW] Replace common_data.pm with Lintian::Check.